# artifacta

./: .depcheckrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  eslint.config.js  index.html  package.json  pyproject.toml  pytest.ini  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
artifacta/: README.md  __init__.py  pyproject.toml
artifacta/artifacta/: __init__.py  artifacts.py  autolog.py  context.py  emitter.py  metadata.py  monitor.py  primitives.py  run.py  utils.py
artifacta/artifacta/integrations/: __init__.py  base.py  dataset_utils.py  pytorch_lightning.py  sklearn.py  tensorflow.py  xgboost.py
artifacta/artifacta/metadata_extractors/: __init__.py  torch.py
artifacta/tests/: test_basic.py  test_emitter_mocked.py  test_primitives.py  test_sklearn_autolog.py  test_utils.py  test_xgboost_autolog.py
artifacta_ui/: __init__.py
config/: eslint.config.js  jsdoc.json  playwright.config.js  vite.config.js
docs/: Makefile  api.rst  conf.py  development.rst  examples.rst  index.rst  ui-api.rst  user-guide.rst
examples/: README.md  ab_testing_experiment.py  pytorch_mnist.py  requirements.txt  run_all_examples.py  tensorflow_regression.py
examples/core/: 01_basic_tracking.py  02_all_primitives.py
examples/domain_specific/: ab_testing_experiment.py  protein_expression.py
examples/ml_frameworks/: pytorch_mnist.py  sklearn_classification.py  tensorflow_regression.py  xgboost_regression.py
src/: main.jsx
src/app/components/: index.js
src/app/components/ArtifactTab/: ArtifactTab.jsx  ArtifactTab.scss
src/app/components/ArtifactsPanel/: ArtifactsPanel.jsx  ArtifactsPanel.scss  index.js
src/app/components/ChatTab/: ChatTab.jsx  ChatTab.scss  ChatTab_base.scss  ChatTab_input.scss  ChatTab_messages.scss  ChatTab_settings.scss  ChatTab_setup.scss  ChatTab_states.scss
src/app/components/LineageTab/: LineageTab.jsx  LineageTab.scss  lineageNodeFactory.js
src/app/components/ProjectNotesTab/: FileAttachmentExtension.js  FileAttachmentNode.jsx  ProjectNotesTab.jsx  ProjectNotesTab.scss
src/app/components/ProjectsPanel/: ProjectsPanel.jsx
src/app/components/RunSelector/: CollapsibleButton.jsx  RunFilter.jsx  RunFilter.scss  RunSelector.jsx  RunSelector.scss  index.js
src/app/components/RunTree/: RunTree.jsx  index.js
src/app/components/SweepsTab/: SweepsTab.jsx  SweepsTab.scss  index.js
src/app/components/layout/: Sidebar.jsx  Sidebar.scss  index.js
src/app/components/layout/TabbedInterface/: TabbedInterface.jsx  TabbedInterface.scss  index.js
src/app/components/ui/: ComponentSettingsMenu.jsx  ComponentSettingsMenu.scss
src/app/components/visualizations/: DraggableVisualization.jsx  DraggableVisualization.scss  UniversalVisualizationRenderer.jsx
src/app/components/visualizations/plots/: BarChart.jsx  CurveChart.jsx  Heatmap.jsx  Histogram.jsx  LinePlot.jsx  LinePlot.jsx.backup  ParallelCoordinatesChart.jsx  ParameterCorrelationChart.jsx  ScatterPlot.jsx  ViolinPlot.jsx
src/app/components/visualizations/shared/: PlotTooltip.css  PlotTooltip.jsx
src/app/hooks/: index.js  useCanvasSetup.js  useCanvasTooltip.js  useDragModeResize.js  useLayoutManager.js  useResponsiveCanvas.js  useRunData.js
src/app/pages/Workspace/: CollapsibleSection.jsx  CollapsibleSection.scss  PlotSection.jsx  Workspace.jsx  Workspace.scss  Workspace_base.scss  Workspace_charts.scss  Workspace_dashboard.scss  Workspace_network.scss  Workspace_playback.scss  Workspace_responsive.scss  Workspace_sections.scss  index.js
src/app/styles/: sidebarConstants.css  sidebarConstants.js
src/app/utils/: artifactColors.js  comparisonPlotDiscovery.js  metricAggregation.js  plotDiscovery.js  sweepDetection.js
src/core/api/: ApiClient.js
src/core/utils/: constants.js  csvExport.js  formatters.js
src/utils/: consoleFilter.js  debugLogger.js
tests/: __init__.py  conftest.py  generate_all_notebooks.py
tests/autolog/: __init__.py  test_autolog_core.py  test_checkpoint_e2e.py  test_pytorch_lightning.py  test_tensorflow.py
tests/domains/: __init__.py  test_ab_testing.py  test_artifact_reuse.py  test_audio_video.py  test_barchart.py  test_climate.py  test_computer_vision.py  test_finance.py  test_genomics.py  test_media.py  test_ml_metrics.py  test_physics.py  test_pytorch.py  test_robotics.py  test_system.py
tests/e2e/: core.spec.js  setup.js  teardown.js  visualization.spec.js
tests/examples/ab_testing/: README.md  ab_test_analyzer.py  stats.py
tests/examples/climate/: README.md  climate_model.py  utils.py
tests/examples/computer_vision/: train_resnet.py
tests/examples/finance/: README.md  risk_management.py  trading_strategy.py
tests/examples/genomics/: README.md  preprocessing.py  variant_caller.py
tests/examples/ml_pipeline/: README.md
tests/examples/ml_pipeline/config/: train_config.yaml
tests/examples/ml_pipeline/src/: data.py  model.py  train.py
tests/examples/ml_pipeline/utils/: metrics.py
tests/fixtures/code/: system_monitor.py
tests/fixtures/code/media/: audio_analyzer.py
tests/fixtures/code/ml_metrics/: classifier.py  embeddings.py
tests/fixtures/code/physics/: simulator.py
tests/fixtures/code/pytorch/: train_classification.py  train_regression.py
tests/fixtures/code/robotics/: path_planner.py
tests/helpers/: __init__.py  api.py  artifacts.py  audio.py  data_generation.py  images.py  notebook.py  notebook_blocknote.py  notebook_html.py  notebook_markdown.py  pdf.py  video.py
tracking-server/: cli.py  config.py  database.py  main.py
tracking-server/routes/: __init__.py  artifacts.py  chat.py  dependencies.py  health.py  projects.py  runs.py  websocket.py
