[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifacta"
version = "0.1.1"
description = "Universal experiment and artifact tracking — gain insights and optimize models with confidence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Elastic License 2.0"}
authors = [
    {name = "Artifacta Contributors"}
]
keywords = ["experiment-tracking", "visualization", "mlops", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click~=8.0",
    "flask~=2.0",
    "flask-cors~=3.0",
    "pillow>=9.0,<11.0; python_version < '3.12'",
    "pillow>=10.0,<11.0; python_version >= '3.12'",
    "fastapi~=0.100",
    "uvicorn~=0.23",
    "python-multipart~=0.0.6",
    "sqlalchemy~=2.0",
    "numpy~=1.24",
    "requests~=2.31",
    "psutil~=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.0",
    "ruff~=0.1",
    "mypy~=1.0",
    "pre-commit~=3.0",
    "pydocstyle~=6.3",
    "sphinx~=7.0",
    "sphinx-rtd-theme~=2.0",
    "sphinx-autodoc-typehints~=1.24",
    "numpy~=1.24",
    "matplotlib~=3.7",
    "seaborn~=0.12",
    "scikit-learn~=1.3",
    "xgboost~=1.7",
    "lightgbm~=4.0",
    "requests~=2.31",
    "sqlalchemy~=2.0",
    "pytorch-lightning~=2.0",
    "torch~=2.0",
    "torchvision~=0.15",
    "tensorflow>=2.12,<3.0; python_version < '3.12'",
    "tensorflow>=2.16,<3.0; python_version >= '3.12'",
    "reportlab~=4.0",
    "bump-my-version~=0.26",
]
video = [
    "av~=10.0",
]

[project.scripts]
artifacta = "tracking_server.cli:cli"

[project.urls]
Homepage = "https://github.com/walkerbdev/artifacta"
Documentation = "https://github.com/walkerbdev/artifacta#readme"
Repository = "https://github.com/walkerbdev/artifacta"
Issues = "https://github.com/walkerbdev/artifacta/issues"

[tool.setuptools]
packages = ["artifacta", "tracking_server", "artifacta_ui"]
package-dir = {"artifacta" = "artifacta/artifacta", "tracking_server" = "tracking-server"}
include-package-data = true

[tool.setuptools.package-data]
artifacta_ui = ["dist/**/*", "index.html"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N803",  # argument name should be lowercase (allow X, y for ML)
    "N806",  # variable name should be lowercase (allow X, y, X_train, etc for ML)
    "SIM102",  # nested if statements (readability preference)
    "SIM105",  # use contextlib.suppress (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["F841", "I001"]  # Allow unused variables and skip import sorting in tests
"artifacta/artifacta/integrations/sklearn.py" = ["F401"]  # Import sklearn for isinstance check

# Mypy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

# Ignore missing imports for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["pydantic.*", "click.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true
disallow_untyped_decorators = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--import-mode=importlib"
]
markers = [
    "integration: Integration tests (requires running server)",
    "unit: Unit tests (no external dependencies)",
    "e2e: End-to-end tests (full system)"
]

# Bump My Version configuration
[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[[tool.bumpversion.files]]
filename = "tracking-server/cli.py"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'
